--- a/extension/manifest.json
+++ b/extension/manifest.json
@@ -1,9 +1,9 @@
 {
   "manifest_version": 3,
-  "name": "Report Bot",
+  "name": "FTR Report Bot",
   "version": "2.0.0",
   "description": "Fight back against the Islamic regime's propaganda machine",
-  "permissions": ["activeTab", "storage", "scripting", "tabs"],
+  "permissions": ["activeTab", "storage", "scripting", "tabs", "alarms"],
   "host_permissions": ["https://www.instagram.com/*", "https://x.com/*", "https://twitter.com/*"],
   "action": {
     "default_popup": "popup.html",
